--- a/age.html
+++ b/age.html
@@ -130,7 +130,7 @@
     </select>
     <!-- National ID Input -->
     <input type="text" id="nationalID" placeholder="أدخل الرقم القومي هنا..." maxlength="14">
-    <button onclick="analyzeNationalID()">تحليل الرقم القومي</button>
+    <button onclick="analyzeNationalID()">ID Analayzer</button>
     <div id="idError" class="error"></div>
 
     <!-- Age Calculator -->
