--- a/new.html
+++ b/new.html
@@ -1,70 +1,163 @@
+التعديل الذي طلبته يبدو أنك تريد إضافة بعض التحسينات أو إجراء تعديلات في التصميم أو الوظائف. إذا كنت بحاجة إلى تعديل معين على الكود الذي قدمته، إليك بعض التحسينات التي يمكن إضافتها:
+	1.	تحسين واجهة المستخدم (UI):
+	•	يمكن تغيير الألوان والتنسيقات لإعطاء مظهر أكثر تناسقًا أو تناسبًا مع متطلبات معينة.
+	•	إضافة تحسينات في التأثيرات التفاعلية على الأزرار.
+	2.	تحسين الوظائف البرمجية:
+	•	إضافة ميزة التحقق من صحة البيانات المدخلة.
+	•	تحسين التعامل مع التحميل التلقائي للبيانات أو إظهار رسالة للمستخدم عند فشل التحميل.
+
+مثال على التعديلات التي يمكن إضافتها:
+
+إضافة مميزات جديدة أو تعديل الواجهة:
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
   <title>واجهة إدخال وتعليق</title>
   <style>
+    /* تخصيصات الألوان */
     body {
-      font-family: Tahoma, Arial;
+      font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
       direction: rtl;
-      background-color: #f2f2f2;
+      background: linear-gradient(to right, #6a11cb, #2575fc);
       padding: 20px;
-      transition: background-color 0.3s;
+      margin: 0;
+      transition: background-color 0.3s ease;
+      color: #fff;
     }
+
     .container {
-      max-width: 800px;
+      max-width: 1200px;
       margin: auto;
       background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 0.8s ease;
     }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    h2 {
+      font-size: 2em;
+      color: #333;
+      margin-bottom: 20px;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    /* تخصيص الحقول والأزرار */
     input, button, select {
-      padding: 8px;
-      margin: 5px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      transition: border-color 0.3s;
     }
+
     input:focus, button:focus {
-      border-color: #007bff;
+      border-color: #2575fc;
       outline: none;
     }
-    .entity {
-      border: 1px solid #ddd;
-      margin-top: 15px;
-      padding: 10px;
-      border-radius: 6px;
+
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .card {
       background-color: #f9f9f9;
+      border: 1px solid #ddd;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .card h3 {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+      color: #333;
+    }
+
+    .card button {
+      background-color: #e74c3c;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 5px;
+      cursor: pointer;
       transition: background-color 0.3s;
     }
-    .entity:hover {
-      background-color: #f1f1f1;
+
+    .card button:hover {
+      background-color: #c0392b;
     }
+
     .comment {
       margin-right: 20px;
+      font-size: 14px;
+      color: #555;
     }
+
+    /* الوضع الليلي */
     .dark-mode {
       background-color: #333;
       color: #fff;
     }
+
     .dark-mode .container {
       background-color: #444;
       color: #fff;
     }
+
     .dark-mode input, .dark-mode button, .dark-mode select {
       background-color: #555;
       color: #fff;
       border-color: #666;
+    }
+
+    .dark-mode .card {
+      background-color: #555;
+      color: #fff;
+      border: 1px solid #666;
+    }
+
+    .dark-mode .card button {
+      background-color: #e67e22;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>نظام إدخال وتعليق</h2>
-    <input type="text" id="searchInput" placeholder="ابحث..." onkeyup="searchEntities()">
+
+    <!-- البحث -->
+    <input type="text" id="searchInput" placeholder="ابحث..." onkeyup="searchEntities()" class="search-input">
     <br><br>
+
+    <!-- إضافة اسم -->
     <input type="text" id="nameInput" placeholder="أدخل اسم جديد">
     <button onclick="addEntity()">إضافة اسم</button>
+
+    <!-- تصدير البيانات -->
     <select id="exportType">
       <option value="excel">تصدير إلى Excel</option>
       <option value="pdf">تصدير إلى PDF</option>
@@ -73,8 +166,10 @@
     </select>
     <button onclick="exportData()">تصدير البيانات</button>
 
-    <div id="entitiesContainer"></div>
+    <!-- الحاوية للتنظيم -->
+    <div id="entitiesContainer" class="cards-container"></div>
 
+    <!-- تبديل الوضع الليلي -->
     <hr>
     <div style="text-align:center;">
       <button onclick="toggleDarkMode()">تبديل الوضع الليلي</button>
@@ -91,6 +186,10 @@
     let entities = [];
     let darkMode = false;
 
+    window.onload = () => {
+      loadDataFromJSON();
+    };
+
     function generateID() {
       return 'id_' + Date.now() + '_' + Math.floor(Math.random() * 10000);
     }
@@ -102,6 +201,7 @@
       const id = generateID();
       const entity = { id, name, comments: [] };
       entities.push(entity);
+      saveDataToJSON();
       renderEntities();
       document.getElementById("nameInput").value = "";
     }
@@ -114,17 +214,20 @@
       const comment = { id: generateID(), text };
       const entity = entities.find(e => e.id === entityId);
       entity.comments.push(comment);
+      saveDataToJSON();
       renderEntities();
     }
 
     function deleteEntity(id) {
       entities = entities.filter(e => e.id !== id);
+      saveDataToJSON();
       renderEntities();
     }
 
     function deleteComment(entityId, commentId) {
       const entity = entities.find(e => e.id === entityId);
       entity.comments = entity.comments.filter(c => c.id !== commentId);
+      saveDataToJSON();
       renderEntities();
     }
 
@@ -134,6 +237,7 @@
       const entity = entities.find(e => e.id === entityId);
       const comment = entity.comments.find(c => c.id === commentId);
       comment.text = newText;
+      saveDataToJSON();
       renderEntities();
     }
 
@@ -143,12 +247,14 @@
 
       entities.forEach(entity => {
         const div = document.createElement("div");
-        div.className = "entity";
+        div.className = "card";
         div.innerHTML = `
-          <strong>${entity.name}</strong> 
-          <button onclick="deleteEntity('${entity.id}')">حذف الاسم</button><br><br>
-          <input type="text" id="comment_input_${entity.id}" placeholder="أضف تعليق">
-          <button onclick="addComment('${entity.id}')">إضافة</button>
+          <h3>${entity.name}</h3>
+          <button onclick="deleteEntity('${entity.id}')">حذف الاسم</button>
+          <div>
+            <input type="text" id="comment_input_${entity.id}" placeholder="أضف تعليق">
+            <button onclick="addComment('${entity.id}')">إضافة</button>
+          </div>
           <div>
             ${entity.comments.map(c => `
               <div class="comment">
@@ -165,11 +271,27 @@
 
     function searchEntities() {
       const keyword = document.getElementById("searchInput").value.toLowerCase();
-      const divs = document.querySelectorAll(".entity");
+      const divs = document.querySelectorAll(".card");
       divs.forEach(div => {
         const text = div.innerText.toLowerCase();
         div.style.display = text.includes(keyword) ? "block" : "none";
       });
+    }
+
+    function saveDataToJSON() {
+      const jsonData = JSON.stringify(entities, null, 2);
+      const blob = new Blob([jsonData], { type: "application/json" });
+      saveAs(blob, "data.json");
+    }
+
+    function loadDataFromJSON() {
+      fetch('data.json')
+        .then(response => response.json())
+        .then(data => {
+          entities = data;
+          renderEntities();
+        })
+        .catch(error => console.log("خطأ في تحميل البيانات: ", error));
     }
 
     function exportData() {
@@ -229,30 +351,29 @@
     function downloadAsWord() {
       const content = document.createElement('div');
       entities.forEach((e, idx) => {
-        const h = document.createElement('h3');
-        h.innerText = `${idx + 1}) ${e.name}`;
-        content.appendChild(h);
+        const nameElement = document.createElement('h3');
+        nameElement.innerText = `${idx + 1}) ${e.name}`;
+        content.appendChild(nameElement);
 
         e.comments.forEach(c => {
-          const p = document.createElement('p');
-          p.innerText = `- ${c.text}`;
-          content.appendChild(p);
+          const commentElement = document.createElement('p');
+          commentElement.innerText = `- ${c.text}`;
+          content.appendChild(commentElement);
         });
       });
 
-      const converted = window.htmlDocx.asBlob(content.innerHTML);
-      saveAs(converted, "البيانات.docx");
+      const converted = htmlDocx.asBlob(content.outerHTML);
+      saveAs(converted, 'البيانات.docx');
     }
 
     function downloadAsJSON() {
-      const json = JSON.stringify(entities, null, 2);
-      const blob = new Blob([json], { type: 'application/json' });
+      const blob = new Blob([JSON.stringify(entities, null, 2)], { type: 'application/json' });
       saveAs(blob, 'البيانات.json');
     }
 
     function toggleDarkMode() {
       darkMode = !darkMode;
-      document.body.classList.toggle('dark-mode', darkMode);
+      document.body.classList.toggle("dark-mode", darkMode);
     }
   </script>
 </body>
