--- a/new.html
+++ b/new.html
@@ -2,86 +2,118 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>الطقس والساعة والموقع</title>
+  <title>معلومات الوقت والطقس</title>
   <style>
     body {
-      font-family: Tahoma, sans-serif;
+      background: linear-gradient(to bottom, #b8e0ff, #ffffff);
+      font-family: 'Cairo', sans-serif;
       direction: rtl;
-      padding: 20px;
-      background-color: #eef6fa;
-      color: #222;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #333;
     }
-    .box {
-      background-color: #fff;
-      padding: 15px;
-      margin: 10px auto;
-      border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+
+    header {
+      background-color: #0077b6;
+      padding: 20px;
+      color: white;
+      font-size: 28px;
+      font-weight: bold;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .container {
       max-width: 600px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #ffffffdd;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #0077b6;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+
+    .loading {
+      color: #999;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <div class="box">
+  <header>عرض الساعة والطقس والموقع</header>
+
+  <div class="container">
     <h2>الساعة والتاريخ</h2>
-    <p id="clock">جارٍ التحميل...</p>
+    <p id="clock" class="loading">جارٍ التحميل...</p>
   </div>
 
-  <div class="box">
+  <div class="container">
     <h2>الموقع الجغرافي</h2>
-    <p id="location">جارٍ التحديد...</p>
+    <p id="location" class="loading">جارٍ التحديد...</p>
   </div>
 
-  <div class="box">
+  <div class="container">
     <h2>الطقس الحالي</h2>
-    <p id="weather">جارٍ التحميل...</p>
+    <p id="weather" class="loading">جارٍ التحميل...</p>
   </div>
 
   <script>
-    // تحديث الساعة كل ثانية
+    // تحديث الساعة
     function updateClock() {
       const now = new Date();
-      document.getElementById("clock").textContent =
-        `الوقت: ${now.toLocaleTimeString()} | التاريخ: ${now.toLocaleDateString()}`;
+      const time = now.toLocaleTimeString('ar-EG');
+      const date = now.toLocaleDateString('ar-EG');
+      document.getElementById("clock").textContent = `الوقت الحالي: ${time} | التاريخ: ${date}`;
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    // الحصول على الموقع الجغرافي وجلب بيانات الطقس
+    // الحصول على الموقع والطقس
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude.toFixed(4);
-        const lon = pos.coords.longitude.toFixed(4);
-        document.getElementById("location").textContent = `خط العرض: ${lat}, خط الطول: ${lon}`;
+      navigator.geolocation.getCurrentPosition(position => {
+        const lat = position.coords.latitude.toFixed(4);
+        const lon = position.coords.longitude.toFixed(4);
+        document.getElementById("location").textContent = `خط العرض: ${lat} | خط الطول: ${lon}`;
 
-        // استدعاء OpenWeather API
-        const apiKey = '0be7f3c72b604f77321d50209e03ef74'; // مفتاحك هنا
+        const apiKey = '0be7f3c72b604f77321d50209e03ef74'; // استخدم مفتاحك هنا
         const url = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric&lang=ar`;
 
         fetch(url)
-          .then(response => response.json())
+          .then(res => res.json())
           .then(data => {
             const temp = data.main.temp;
             const humidity = data.main.humidity;
             const pressure = data.main.pressure;
             const wind = data.wind.speed;
-            const description = data.weather[0].description;
+            const desc = data.weather[0].description;
+            const city = data.name;
+
             document.getElementById("weather").innerHTML = `
+              المدينة: ${city}<br>
               درجة الحرارة: ${temp}°C<br>
               الرطوبة: ${humidity}%<br>
               الضغط الجوي: ${pressure} hPa<br>
               سرعة الرياح: ${wind} م/ث<br>
-              وصف الطقس: ${description}
+              وصف الطقس: ${desc}
             `;
           })
           .catch(err => {
-            document.getElementById("weather").textContent = "فشل في تحميل بيانات الطقس.";
+            document.getElementById("weather").textContent = "حدث خطأ أثناء تحميل بيانات الطقس.";
             console.error(err);
           });
 
       }, () => {
-        document.getElementById("location").textContent = "لم يتم السماح بتحديد الموقع.";
+        document.getElementById("location").textContent = "لم يتم السماح بالوصول إلى الموقع.";
       });
     } else {
       document.getElementById("location").textContent = "المتصفح لا يدعم تحديد الموقع.";
