--- a/new.html
+++ b/new.html
@@ -2,123 +2,130 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>معلومات الوقت والطقس</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>تطبيق الطقس</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/weather-icons/css/weather-icons.min.css">
   <style>
     body {
-      background: linear-gradient(to bottom, #b8e0ff, #ffffff);
-      font-family: 'Cairo', sans-serif;
-      direction: rtl;
       margin: 0;
-      padding: 0;
+      font-family: 'Cairo', sans-serif;
       text-align: center;
-      color: #333;
-    }
-
-    header {
-      background-color: #0077b6;
-      padding: 20px;
       color: white;
-      font-size: 28px;
-      font-weight: bold;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      background: linear-gradient(to top, #1e3c72, #2a5298);
+      transition: background 1s ease-in-out;
     }
 
     .container {
-      max-width: 600px;
-      margin: 30px auto;
-      padding: 20px;
-      background-color: #ffffffdd;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      padding: 30px;
     }
 
-    h2 {
-      color: #0077b6;
-      margin-bottom: 10px;
+    .weather-icon {
+      font-size: 100px;
+      margin: 20px 0;
+      animation: float 3s ease-in-out infinite;
     }
 
-    p {
-      font-size: 18px;
-      margin: 10px 0;
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
-    .loading {
-      color: #999;
+    .info {
+      font-size: 22px;
+      line-height: 1.6;
+    }
+
+    .clock {
+      margin-top: 30px;
+      font-size: 24px;
+    }
+
+    @media (max-width: 600px) {
+      .weather-icon { font-size: 70px; }
+      .info, .clock { font-size: 18px; }
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <header>عرض الساعة والطقس والموقع</header>
-
   <div class="container">
-    <h2>الساعة والتاريخ</h2>
-    <p id="clock" class="loading">جارٍ التحميل...</p>
-  </div>
-
-  <div class="container">
-    <h2>الموقع الجغرافي</h2>
-    <p id="location" class="loading">جارٍ التحديد...</p>
-  </div>
-
-  <div class="container">
-    <h2>الطقس الحالي</h2>
-    <p id="weather" class="loading">جارٍ التحميل...</p>
+    <h1>الطقس الآن حسب موقعك</h1>
+    <i id="icon" class="weather-icon wi wi-day-sunny"></i>
+    <div class="info" id="weatherInfo">جارٍ تحميل البيانات...</div>
+    <div class="clock" id="clock">--:--:--</div>
   </div>
 
   <script>
-    // تحديث الساعة
     function updateClock() {
       const now = new Date();
-      const time = now.toLocaleTimeString('ar-EG');
-      const date = now.toLocaleDateString('ar-EG');
-      document.getElementById("clock").textContent = `الوقت الحالي: ${time} | التاريخ: ${date}`;
+      document.getElementById("clock").innerText = now.toLocaleTimeString();
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    // الحصول على الموقع والطقس
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(position => {
-        const lat = position.coords.latitude.toFixed(4);
-        const lon = position.coords.longitude.toFixed(4);
-        document.getElementById("location").textContent = `خط العرض: ${lat} | خط الطول: ${lon}`;
+    function getWeather(lat, lon) {
+      const apiKey = "900aae45d7914ab66afb12a0cac56966"; // مفتاح API الخاص بك من OpenWeather
+      const url = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&lang=ar&units=metric&appid=${apiKey}`;
 
-        const apiKey = '0be7f3c72b604f77321d50209e03ef74'; // استخدم مفتاحك هنا
-        const url = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric&lang=ar`;
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          const city = data.name;
+          const desc = data.weather[0].description;
+          const temp = data.main.temp;
+          const iconCode = data.weather[0].icon;
 
-        fetch(url)
-          .then(res => res.json())
-          .then(data => {
-            const temp = data.main.temp;
-            const humidity = data.main.humidity;
-            const pressure = data.main.pressure;
-            const wind = data.wind.speed;
-            const desc = data.weather[0].description;
-            const city = data.name;
+          document.getElementById("weatherInfo").innerHTML = `
+            <strong>${city}</strong><br>
+            ${desc}<br>
+            درجة الحرارة: ${temp}°C
+          `;
 
-            document.getElementById("weather").innerHTML = `
-              المدينة: ${city}<br>
-              درجة الحرارة: ${temp}°C<br>
-              الرطوبة: ${humidity}%<br>
-              الضغط الجوي: ${pressure} hPa<br>
-              سرعة الرياح: ${wind} م/ث<br>
-              وصف الطقس: ${desc}
-            `;
-          })
-          .catch(err => {
-            document.getElementById("weather").textContent = "حدث خطأ أثناء تحميل بيانات الطقس.";
-            console.error(err);
-          });
+          // تغيير الأيقونة حسب كود OpenWeather
+          const iconMap = {
+            "01d": "wi-day-sunny",
+            "01n": "wi-night-clear",
+            "02d": "wi-day-cloudy",
+            "02n": "wi-night-alt-cloudy",
+            "03d": "wi-cloud",
+            "03n": "wi-cloud",
+            "04d": "wi-cloudy",
+            "04n": "wi-cloudy",
+            "09d": "wi-showers",
+            "09n": "wi-showers",
+            "10d": "wi-day-rain",
+            "10n": "wi-night-alt-rain",
+            "11d": "wi-thunderstorm",
+            "11n": "wi-thunderstorm",
+            "13d": "wi-snow",
+            "13n": "wi-snow",
+            "50d": "wi-fog",
+            "50n": "wi-fog"
+          };
 
-      }, () => {
-        document.getElementById("location").textContent = "لم يتم السماح بالوصول إلى الموقع.";
-      });
-    } else {
-      document.getElementById("location").textContent = "المتصفح لا يدعم تحديد الموقع.";
+          const iconClass = iconMap[iconCode] || "wi-cloud";
+          document.getElementById("icon").className = `weather-icon wi ${iconClass}`;
+
+          // تغيير الخلفية حسب الوقت
+          const hour = new Date().getHours();
+          if (hour >= 6 && hour < 18) {
+            document.body.style.background = "linear-gradient(to top, #1e3c72, #2a5298)";
+          } else {
+            document.body.style.background = "linear-gradient(to top, #000428, #004e92)";
+          }
+        })
+        .catch(err => {
+          document.getElementById("weatherInfo").innerText = "فشل في جلب بيانات الطقس.";
+          console.error(err);
+        });
     }
-  </script>
 
+    navigator.geolocation.getCurrentPosition(
+      pos => getWeather(pos.coords.latitude, pos.coords.longitude),
+      err => {
+        document.getElementById("weatherInfo").innerText = "فشل في تحديد الموقع.";
+        console.error(err);
+      }
+    );
+  </script>
 </body>
 </html>
