--- a/age2.html
+++ b/age2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌍 محلل الهوية الوطنية المصرية</title>
+    <title>🌍</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -218,7 +218,7 @@
 </head>
 <body>
 <div class="container" tabindex="0">
-    <h1><i class="fas fa-id-card"></i> محلل الهوية الوطنية المصرية</h1>
+    <h1><i class="fas fa-id-card"></i> 🌍</h1>
     
     <div class="section">
         <div class="input-group">
