--- a/coordinates.html
+++ b/coordinates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محول الإحداثيات الدقيق</title>
+    <title> 🌍🌍🌍 </title>
     <style>
         body {
             font-family: 'Tajawal', Arial, sans-serif;
