--- a/coordinates.html
+++ b/coordinates.html
@@ -3,166 +3,236 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>محول الإحداثيات الذكي - خرائط جوجل</title>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <title>محول الإحداثيات الذكي</title>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <style>
         body {
             font-family: 'Tajawal', sans-serif;
-            background: #f8f9fa;
-            padding: 20px;
+            background-color: #f4f6f9;
+            margin: 0;
+            padding: 0;
+            color: #333;
         }
         .container {
-            max-width: 900px;
+            max-width: 960px;
             margin: auto;
-            background: #fff;
+            padding: 20px;
+        }
+        .card {
+            background: white;
+            border-radius: 14px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
             padding: 30px;
-            border-radius: 16px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
         }
         h1 {
             text-align: center;
-            margin-bottom: 30px;
-        }
-        input[type="file"] {
-            display: none;
-        }
-        label {
-            background: #4285F4;
-            color: white;
-            padding: 12px 25px;
-            display: inline-block;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-bottom: 15px;
-        }
-        button {
-            background: #34A853;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-bottom: 20px;
-            font-size: 16px;
-        }
-        .result {
-            margin-top: 30px;
-        }
-        .card {
-            background: #f1f3f4;
-            padding: 15px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .card a {
             color: #4285F4;
         }
-        iframe {
+        .upload-label {
+            display: block;
+            text-align: center;
+            margin: 20px 0;
+            font-weight: bold;
+        }
+        .upload-btn {
+            display: block;
             width: 100%;
-            height: 300px;
+            max-width: 250px;
+            margin: auto;
+            background: #4285F4;
+            color: white;
+            padding: 12px;
             border: none;
-            margin-top: 10px;
             border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .upload-btn:hover {
+            background: #3367D6;
+        }
+        #fileName {
+            text-align: center;
+            margin-top: 10px;
+            color: #888;
+        }
+        #processBtn {
+            background: #34A853;
+            margin: 20px auto;
+            display: block;
+            padding: 12px 24px;
+            font-size: 16px;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        #processBtn:hover {
+            background: #2c844b;
+        }
+        .progress-bar {
+            width: 100%;
+            background: #ddd;
+            height: 10px;
+            border-radius: 5px;
+            overflow: hidden;
+            margin: 20px 0;
+            display: none;
+        }
+        .progress-bar-inner {
+            height: 100%;
+            width: 0;
+            background: linear-gradient(90deg, #4285F4, #34A853, #FBBC05, #EA4335);
+            animation: loading 2s infinite linear;
+        }
+        @keyframes loading {
+            0% { width: 0%; }
+            100% { width: 100%; }
+        }
+        .results-count {
+            text-align: center;
+            font-weight: bold;
+            margin: 20px 0;
+        }
+        .result-card {
+            border: 1px solid #ccc;
+            border-radius: 12px;
+            padding: 20px;
+            margin-bottom: 20px;
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .map {
+            height: 200px;
+            width: 100%;
+            border: none;
+            border-radius: 8px;
+            margin-top: 10px;
+        }
+        .copy-btn {
+            margin-top: 10px;
+            padding: 8px 12px;
+            background: white;
+            border: 1px solid #4285F4;
+            border-radius: 6px;
+            cursor: pointer;
+            color: #4285F4;
+        }
+        .copy-btn:hover {
+            background: #eaf2ff;
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <h1>محول الإحداثيات الذكي</h1>
-    <label for="excelFile">📄 اختر ملف Excel</label>
-    <input type="file" id="excelFile" accept=".xlsx,.xls"/>
-    <br>
-    <button onclick="processFile()">🔄 تحويل الإحداثيات</button>
-    <div id="output" class="result"></div>
-</div>
+    <div class="container">
+        <h1>🔄 محول الإحداثيات الذكي</h1>
+        <div class="card">
+            <label class="upload-label">تحميل ملف Excel (بصيغة N 3121258 E 2713105)</label>
+            <input type="file" id="excelFile" style="display:none;" accept=".xlsx, .xls"/>
+            <button class="upload-btn" onclick="document.getElementById('excelFile').click()">📂 اختر ملف</button>
+            <div id="fileName">لم يتم اختيار ملف</div>
+            <button id="processBtn">🚀 معالجة الملف</button>
+            <div class="progress-bar"><div class="progress-bar-inner"></div></div>
+        </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-<script>
-    function readExcel(file) {
-        return new Promise((resolve, reject) => {
+        <div id="results" style="display:none;">
+            <div class="results-count"></div>
+            <div id="resultsList"></div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script>
+        const fileInput = document.getElementById('excelFile');
+        const fileName = document.getElementById('fileName');
+        const processBtn = document.getElementById('processBtn');
+        const resultsContainer = document.getElementById('results');
+        const resultsList = document.getElementById('resultsList');
+        const resultsCount = document.querySelector('.results-count');
+        const progressBar = document.querySelector('.progress-bar');
+
+        fileInput.addEventListener('change', () => {
+            if (fileInput.files.length > 0) {
+                fileName.innerText = "✅ الملف: " + fileInput.files[0].name;
+            } else {
+                fileName.innerText = "لم يتم اختيار ملف";
+            }
+        });
+
+        processBtn.addEventListener('click', () => {
+            if (!fileInput.files.length) {
+                alert("يرجى اختيار ملف أولاً");
+                return;
+            }
+
+            progressBar.style.display = "block";
+            resultsContainer.style.display = "none";
+            resultsList.innerHTML = "";
+            resultsCount.innerHTML = "";
+
             const reader = new FileReader();
-            reader.onload = e => {
+            reader.onload = function (e) {
                 const data = new Uint8Array(e.target.result);
                 const workbook = XLSX.read(data, { type: "array" });
                 const sheet = workbook.Sheets[workbook.SheetNames[0]];
-                const json = XLSX.utils.sheet_to_json(sheet, { header: 1 });
-                resolve(json);
+                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+
+                const header = rows[0];
+                const coordIndex = header.findIndex(h => h.toString().includes("N") && h.toString().includes("E"));
+                if (coordIndex === -1) {
+                    alert("⚠️ لم يتم العثور على عمود الإحداثيات");
+                    progressBar.style.display = "none";
+                    return;
+                }
+
+                const results = [];
+                for (let i = 1; i < rows.length; i++) {
+                    const raw = rows[i][coordIndex];
+                    if (!raw) continue;
+
+                    const match = raw.match(/N\s*(\d+)\s*E\s*(\d+)/);
+                    if (!match) continue;
+
+                    const lat = convertDMS(match[1], true);
+                    const lon = convertDMS(match[2], false);
+
+                    results.push({
+                        raw: raw,
+                        lat: lat.toFixed(7),
+                        lon: lon.toFixed(7),
+                        mapUrl: `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`
+                    });
+                }
+
+                resultsCount.innerText = `🔍 عدد المواقع المعالجة: ${results.length}`;
+                results.forEach((item, idx) => {
+                    const div = document.createElement('div');
+                    div.className = "result-card";
+                    div.innerHTML = `
+                        <strong>📍 الموقع ${idx + 1}</strong><br/>
+                        <strong>الإحداثيات الأصلية:</strong> ${item.raw}<br/>
+                        <strong>الإحداثيات المحوّلة:</strong> ${item.lat}, ${item.lon}<br/>
+                        <iframe class="map" src="${item.mapUrl}"></iframe>
+                        <button class="copy-btn" onclick="navigator.clipboard.writeText('${item.lat},${item.lon}')">📋 نسخ الإحداثيات</button>
+                    `;
+                    resultsList.appendChild(div);
+                });
+
+                progressBar.style.display = "none";
+                resultsContainer.style.display = "block";
             };
-            reader.onerror = reject;
-            reader.readAsArrayBuffer(file);
+            reader.readAsArrayBuffer(fileInput.files[0]);
         });
-    }
 
-    async function processFile() {
-        const fileInput = document.getElementById('excelFile');
-        const outputDiv = document.getElementById('output');
-        outputDiv.innerHTML = '';
-
-        if (fileInput.files.length === 0) {
-            alert("الرجاء اختيار ملف Excel");
-            return;
+        function convertDMS(dms, isLat) {
+            const padded = dms.toString().padStart(isLat ? 7 : 7, '0');
+            const deg = parseInt(padded.slice(0, isLat ? 2 : 3));
+            const min = parseInt(padded.slice(isLat ? 2 : 3, isLat ? 4 : 5));
+            const sec = parseInt(padded.slice(isLat ? 4 : 5, isLat ? 6 : 7));
+            return deg + min / 60 + sec / 3600;
         }
-
-        const file = fileInput.files[0];
-        const rows = await readExcel(file);
-
-        const header = rows[0];
-        const coordsIndex = header.findIndex(h => typeof h === 'string' && h.includes('N') && h.includes('E'));
-
-        if (coordsIndex === -1) {
-            outputDiv.innerHTML = '<p style="color:red;">⚠️ لم يتم العثور على عمود الإحداثيات</p>';
-            return;
-        }
-
-        for (let i = 1; i < rows.length; i++) {
-            const row = rows[i];
-            const coordStr = (row[coordsIndex] || '').toString().trim();
-
-            const parsed = parseCoordinate(coordStr);
-            if (!parsed) continue;
-
-            const { lat, lon, mapUrl, iframeUrl } = parsed;
-
-            const card = document.createElement('div');
-            card.className = 'card';
-            card.innerHTML = `
-                <p><strong>الإحداثيات الأصلية:</strong> ${coordStr}</p>
-                <p><strong>الموقع:</strong> ${lat.toFixed(6)}°, ${lon.toFixed(6)}°</p>
-                <a href="${mapUrl}" target="_blank">🌍 فتح في خرائط جوجل</a>
-                <iframe src="${iframeUrl}" loading="lazy"></iframe>
-            `;
-            outputDiv.appendChild(card);
-        }
-    }
-
-    function parseCoordinate(text) {
-        if (!text) return null;
-
-        // يحاول استخلاص الشكل: 'N 3121258 E 2713105' أو 'N'||3121258||'E'||2713105
-        const match = text.match(/N\s*([0-9]{7})\s*E\s*([0-9]{7})/) ||
-                      text.match(/'N'\|\|(\d{7})\|\|'E'\|\|(\d{7})/);
-
-        if (!match) return null;
-
-        const latDMS = match[1];
-        const lonDMS = match[2];
-
-        const lat = dmsToDecimal(latDMS, true);
-        const lon = dmsToDecimal(lonDMS, false);
-
-        const mapUrl = `https://www.google.com/maps?q=${lat},${lon}&z=16`;
-        const iframeUrl = `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`;
-
-        return { lat, lon, mapUrl, iframeUrl };
-    }
-
-    function dmsToDecimal(dms, isLat) {
-        const dLen = isLat ? 2 : 3;
-        const deg = parseInt(dms.slice(0, dLen));
-        const min = parseInt(dms.slice(dLen, dLen + 2));
-        const sec = parseInt(dms.slice(dLen + 2, dLen + 4));
-        return deg + (min / 60) + (sec / 3600);
-    }
-</script>
+    </script>
 </body>
 </html>
